// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigSummary visual snapshot - full config with multiple pages: config-summary-full 1`] = `
"Configuration Summary


Main Page:
 https://example.com

Additional Pages (2):
• https://example.com/about
• https://example.com/contact

Page Descriptions (3):
  https://example.com
  Homepage with hero section and call-to-action
  https://example.com/about
  About page with company information and team profiles
  https://example.com/contact
  Contact page with form validation and location map

Personas (2):
  1. Marketing manager, 35-45 years old, needs quick insights into campaign performan...
  2. Product designer, 25-35 years old, focuses on user experience and design consist...

Report Output:
 ./reports/ux-analysis.md"
`;

exports[`ConfigSummary visual snapshot - long text truncation: config-summary-truncated 1`] = `
"Configuration Summary


Main Page:
 https://example.com

Page Descriptions (1):
  https://example.com
  This is a very long description that exceeds 100 characters and should be truncated with an
  ellipsis...

Personas (1):
  1. This is a very long persona description that exceeds 80 characters and should be...

Report Output:
 ./ux-report.md"
`;

exports[`ConfigSummary visual snapshot - minimal config: config-summary-minimal 1`] = `
"Configuration Summary


Main Page:
 https://example.com

Page Descriptions (1):
  https://example.com
  Homepage with hero section and CTA button

Personas (1):
  1. Product manager, 30-40 years old, needs quick insights

Report Output:
 ./ux-report.md"
`;
